--- a/charts/helm-example/values.yaml
+++ b/charts/helm-example/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   pullPolicy: IfNotPresent
-  repository: 145664717845.dkr.ecr.ap-south-1.amazonaws.com/gitops-argocd
+  repository: 578310434439.dkr.ecr.ap-northeast-2.amazonaws.com/cicd-test
   version: main-8471792
 
 imagePullSecrets: []
